--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "express-basic-auth": "^1.2.1",
+    "hbs": "^4.2.0",
     "joi": "^17.9.1",
     "passport": "^0.5.2",
     "passport-http": "^0.3.0",
